test/fail/local-redeclare.rnp
let a = 1;
let a = 1;
---
SyntaxError: Cannot shadow or redeclare a
